// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#TimeProvider should render a single child 1`] = `
<DocumentFragment>
  <div>
    Test
  </div>
</DocumentFragment>
`;

exports[`#TimeProvider should render multiple children 1`] = `
<DocumentFragment>
  <div>
    Test1
  </div>
  <div>
    Test2
  </div>
  <div>
    Test3
  </div>
</DocumentFragment>
`;

exports[`#TimeProvider should render null when no children are provided 1`] = `<DocumentFragment />`;
